--- a/BibleKeyboard-iPad/View/BibleKeyboardView.xib
+++ b/BibleKeyboard-iPad/View/BibleKeyboardView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -242,7 +242,7 @@
                 <outlet property="bookLabel" destination="iN3-t0-rfP" id="3ZM-69-skD"/>
                 <outlet property="nextKeyboardBtn" destination="wqo-D9-i1d" id="8RV-5u-WsO"/>
                 <outlet property="verseNumsIncludedBtn" destination="PWR-vp-Dcl" id="hmS-tg-SBl"/>
-                <outlet property="verseReference" destination="Bte-uU-GDi" id="JKS-Wf-qXR"/>
+                <outlet property="verseReferenceTxtField" destination="Bte-uU-GDi" id="JKS-Wf-qXR"/>
             </connections>
             <point key="canvasLocation" x="137.59999999999999" y="153.82308845577214"/>
         </view>
